# hesoyam

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: build-agent.yml  deploy-discord-bot.yml
apps/admin/: package.json  pnpm-lock.yaml
apps/backend/: .env.example  Dockerfile  package.json
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: main.rs
apps/desktop/src/auth/: browser_auth.rs  mod.rs
apps/desktop/src/storage/: local_db.rs
apps/desktop/src/sync/: cloud_sync.rs  mod.rs  offline_queue.rs  signature_sync.rs
apps/desktop/src/tracker/: game_matcher.rs  idle_detector.rs  mod.rs  process_scanner.rs  session_manager.rs
apps/desktop/src/tray/: menu.rs
apps/desktop/ui/: index.html  settings.html
apps/discord-rp-server/: .env.example  .gitignore  Dockerfile  README.md  ecosystem.config.cjs  package.json
apps/mobile_app/: .env.example  .gitignore  PRD.md  README.md  analysis_options.yaml  pubspec.yaml
apps/web/: .env.example  package.json  pnpm-lock.yaml
docs/: PRD.md
docs-hesoyam/: DISCORD_RP_TRACKING.md  IGDB_INTEGRATION_PLAN.md  MOBILE_APP_PRD_DRAFT.md  PRD.md
docs-hesoyam/.obsidian/: app.json  workspace.json
docs-hesoyam/til/: 2026-03-04-websocket-data-frames-vs-handshake-gcp.md
supabase/: config.toml
supabase/migrations/: 20260126104929_create_profiles_table.sql  20260126104938_create_games_table.sql  20260126104956_create_process_signatures_table.sql  20260126104957_create_game_sessions_table.sql  20260402000000_add_session_rpcs.sql  (+34 more)
(+245 files in other folders)
